<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
   >

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_logo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_image"
        android:layout_marginTop="30dp"
        android:minHeight="48dp"
        android:padding="12dp"
        android:hint="@string/enter_votre_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="30dp"
        android:minHeight="48dp"
        android:padding="12dp"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword" />




    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="50dp"
        android:text="@string/se_connecter"
        />
</RelativeLayout>
